# tray_racing

./: .gitignore  Cargo.toml  README.md
assets/scenes/: bistro.ron  box.ron  caldera_hotel_01.ron  cornell_box.ron  courtyard.ron  fireplace_room.ron  hairball.ron  hairball2.ron  hairball3.ron  kitchen.ron  san-miguel.ron  sponza.ron  sponza_low.ron  sponza_reverse.ron
embree/: Cargo.toml
embree/src/: bvh_embree.rs  bvh_embree_to_cwbvh.rs  embree_managed.rs  gpu_bvh_builder_embree.rs  gpu_bvh_builder_embree_bvh2.rs  lib.rs
src/: auto_tune.rs  binding_utils.rs  cwbvh.rs  main.rs  parry.rs  svenstaro.rs  timestamp.rs  tinybvh.rs  verbose.rs
src/rt_cpu/: cwbvh_packet_traversal.rs  mod.rs  rt_cpu.rs
src/rt_gpu/: acceleration_structure_instance.rs  mod.rs  rt_gpu_hardware.hlsl  rt_gpu_hardware.rs  rt_gpu_software.hlsl  rt_gpu_software.rs  rt_gpu_software_packet.hlsl  rt_gpu_software_query.hlsl  rt_gpu_software_query_packet.hlsl  rt_gpu_software_query_tlas.hlsl  rt_gpu_software_tlas.hlsl  sampling.hlsl  shader_utils.rs
traversable/: Cargo.toml
traversable/src/: lib.rs
