[package]
name = "tray_racing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.19", features = ["spirv", "vulkan-portability"] }
# Only Needed if comparing HW RT https://github.com/gfx-rs/wgpu/pull/3631, crashes on exit
#wgpu = { git = "https://github.com/daniel-keitel/wgpu", rev = "e042a863", features = [
#    "spirv",
#    "vulkan-portability",
#] } # branch = "ray-tracing"

obj = { version = "0.10.2", features = ["genmesh"] }
futures = { version = "0.3", default-features = false, features = [
    "std",
    "executor",
] }
structopt = "0.3"
bytemuck = "1.15"
image = "0.24.7"
winit = "0.29.10"
tabled = "0.15.0"
glam = { version = "0.27", features = ["bytemuck", "serde"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
rayon = "1.10.0"
obvhs = { git = "https://github.com/DGriffin91/obvhs", features = [
    "profile",
    "profile-with-tracing",
] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
profiling = "1.0"
chrono = "0.4"
csv = "1.3"
bvh = { version = "0.9", default-features = false }
nalgebra = { version = "0.32.2" } # Only for svenstaro & parry3d bvh crates
parry3d = "0.15.1"

obvhs_embree = { path = "embree/", optional = true }
embree4-sys = { version = "0.0.10", optional = true }
embree4-rs = { git = "https://github.com/DGriffin91/embree4-rs", branch = "obvhs" }

traversable = { path = "traversable/" }

[profile.release-with-debug]
inherits = "release"
debug = true

# BVH building seems faster, but traversal seems slower vs just --release
[profile.fast]
inherits = "release"
codegen-units = 1
panic = "abort"
lto = "fat"

# Enable optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3


[features]
#default = ["embree"]
embree = ["dep:obvhs_embree", "dep:embree4-sys"]

# Traversal is always parallel
parallel_build = ["obvhs/parallel", "bvh/rayon"]

# Need to also manually use wgpu from PR
hardware_rt = []
